# Flow-AdSystem

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  localValidate.sh  start.sh
.claude/: settings.json
.claude/commands/: schema.md  step1-generateData.md  step2-parseOpenRTB.md  step3-adIndexing.md  step4-frequency-production.md  step5-pacing-production.md  step6-ctr-estimation-simple.md  step6-ctr-estimation.md  step7-ecpm-ranking-production.md  step8-implementation-plan.md  step8-openrtb-response-builder.md
.github/workflows/: ci.yml  gtest.yml
core/ctr/: CMakeLists.txt  README.md  ctr_manager.cpp  ctr_manager.h
core/ctr/core/: feature_context.h  feature_spec.h  model_config.h
core/ctr/engine/: model_inference_engine.h  onnx_runtime_engine.cpp  onnx_runtime_engine.h
core/ctr/extractor/: ad_feature_extractor.cpp  ad_feature_extractor.h  context_feature_extractor.cpp  context_feature_extractor.h  feature_extractor.h  user_feature_extractor.cpp  user_feature_extractor.h
core/frequency/: CMakeLists.txt  README.md  async_impression_logger.hpp  frequency_manager.cpp  frequency_manager.hpp  frequency_record.hpp
core/indexing/: CMakeLists.txt  README.md  ad_index.cpp  ad_index.hpp  ad_store.cpp  ad_store.hpp  bitmap.hpp  index_loader.cpp  index_loader.hpp  inverted_index.cpp  inverted_index.hpp
core/openrtb/: CMakeLists.txt  README.md  auction_decision.cpp  auction_decision.h  openrtb_models.h  openrtb_parser.cpp  openrtb_parser.h  openrtb_response_builder.cpp  openrtb_response_builder.h  openrtb_response_models.h  response_serializer.cpp  response_serializer.h
core/pacing/: CMakeLists.txt  README.md  async_pacing_updater.hpp  budget_config.hpp  budget_state.hpp  pacing_manager.cpp  pacing_manager.hpp
core/ranker/: CMakeLists.txt  ad_candidate.hpp  ecpm_calculator.cpp  ecpm_calculator.hpp  ranker.cpp  ranker.hpp  sorting_strategy.hpp  topk_selector.cpp  topk_selector.hpp
data/: CMakeLists.txt  README.md
data/data/: ads_data.json  openrtb_requests.json
data/generator/: CMakeLists.txt  README.md  ad_generator.cpp  ad_generator.h  data_loader.cpp  data_loader.h  main.cpp
data/models/: README.md  ad_model.h
docs/diagrams/src/: ad-system-architecture.puml
docs/diagrams/src/models/: deep-fm-architecture.puml  deep-fm-class-structure.puml  deep-fm-forward-pass.puml
python/ctr_training/: README.md  export_onnx.py  quick_train.sh  test_onnx_simple.py  train.py  train_with_synthetic_data.py  verify_onnx.py
python/ctr_training/data/: prepare_data.py
scripts/: generate_data.sh
tests/: CMakeLists.txt  README.md
tests/integration/: README.md  integration_test_full_pipeline.cpp  integration_test_index_frequency_pacing.cpp  integration_test_openrtb_indexing.cpp
tests/unit/: ctr_e2e_test.cpp  ctr_latency_benchmark.cpp  ctr_test.cpp  frequency_test.cpp  indexing_test.cpp  openrtb_parser_test.cpp  openrtb_response_test.cpp  ranker_test.cpp  test_pacing.cpp
